--- a/changes.html
+++ b/changes.html
@@ -7,7 +7,7 @@
 <DIV ALIGN=CENTER>
   <H1>SNMP support for Perl 5: Changes</H1>
 
-  <p> Copyright (c) 1995-2001, Simon Leinen<br>
+  <p> Copyright (c) 1995-2002, Simon Leinen<br>
   All rights reserved </p>
 
   <em> This program is free software; you can redistribute it under
@@ -23,6 +23,12 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 <h2> Recent Changes: </h2>
 
 <ul>
+
+<li> SNMP_Session.pm 0.91: Fixed a bug in <tt>map_table_start_end</tt>
+for <tt>SNMPv2_Session</tt> (which uses <tt>get-bulk</tt>) which had
+caused a superfluous query after the entire table has already been
+provably traversed.  Thanks to Michael Deegan for pointing this
+out. </li>
 
 <li> SNMP_util.pm 0.90: New version from Mike Mitchell.
  <tt>snmpwalkhash</tt> and <tt>snmpwalk</tt> now share most
@@ -504,7 +510,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20011114
+20020130
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
