--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ Amazon.de"></a>. </p>
 <p> For an excellent example of the type of application this is useful
  for, see Tobias Oetiker's <a
  href="http://ee-staff.ethz.ch/~oetiker/webtools/mrtg/mrtg.html">``mrtg''
- (Multi Router Traffic Grapher)</a> tool </p>
+ (Multi Router Traffic Grapher)</a> tool.  Another application that
+ uses this library is <a href="http://www.dynw.com/iog/">IOG</a>
+ (Input/Output Grapher). </p>
 
 <h2> Recent Changes: </h2>
 
@@ -384,7 +386,7 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20020130
+20020530
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
