Added pointer to test/capturetest.pl.

--- a/changes.html
+++ b/changes.html
@@ -26,7 +26,9 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <li> SNMP_Session.pm 0.94: A new slot <tt>capture_buffer</tt> has been
 added to the SNMP_Session classes, courtesy <a
-href="mailto:jakob.ilves@oracle.com">Jakob Ilves</a>. </li>
+href="mailto:jakob.ilves@oracle.com">Jakob Ilves</a>.  See the sample
+script <tt>test/capturetest.pl</tt> for an example of how to use
+this. </li>
 
 <li> BER.pm 0.94: New subroutines <tt>pretty_generic_sequence</tt>,
 <tt>decode_generic_tlv</tt>, courtesy <a
