Document decode_sequence() bug fix.

--- a/changes.html
+++ b/changes.html
@@ -24,6 +24,9 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <ul>
 
+<li> BER.pm 0.95: Fixed operator precedence bug in
+decode_sequence(). </li>
+
 <li> SNMP_Session.pm 0.94: A new slot <tt>capture_buffer</tt> has been
 added to the SNMP_Session classes, courtesy <a
 href="mailto:jakob.ilves@oracle.com">Jakob Ilves</a>.  See the sample
@@ -562,7 +565,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20021027
+20030313
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
