Added IPv6; $default_avoid_negative_request_ids notes.

--- a/changes.html
+++ b/changes.html
@@ -24,6 +24,16 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <ul>
 
+<li> SNMP_Session 0.97: Exported
+<tt>$SNMP_Session::default_avoid_negative_request_ids</tt>, by
+Philippe Simonet. </li>
+
+<li> SNMP_Session 0.97: IPv6 support added by Valerio Bontempi and
+Lorenzo Colitti. </li>
+
+<li> SNMP_Session 0.96: Intermediate version with IPv6 support; not
+published. </li>
+
 <li> BER.pm 0.95: Fixed operator precedence bug in
 decode_sequence(). </li>
 
@@ -565,7 +575,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20030313
+20030630
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
