TimeTicks support in snmpset.

--- a/changes.html
+++ b/changes.html
@@ -24,6 +24,10 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <ul>
 
+<li> SNMP_util 0.97: Added support for TimeTicks values in
+<tt>snmpset</tt>.  Patch from <a href="JOERG.KUMMER@Roche.COM">Joerg
+Kummer</a> </li>
+
 <li> SNMP_Session 0.97: Exported
 <tt>$SNMP_Session::default_avoid_negative_request_ids</tt>, by
 Philippe Simonet. </li>
@@ -575,7 +579,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20030630
+20030902
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
