--- a/changes.html
+++ b/changes.html
@@ -24,6 +24,11 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <ul>
 
+<li> SNMP_Session 0.98: Portability fix in IPv6 support. </li>
+
+<li> SNMP_util 0.98: Support encoding of OIDs containing multiple
+quoted strings. </li>
+
 <li> SNMP_util 0.97: Added support for TimeTicks values in
 <tt>snmpset</tt>.  Patch from <a href="JOERG.KUMMER@Roche.COM">Joerg
 Kummer</a> </li>
@@ -579,7 +584,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20030902
+20030909
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
