--- a/trunk/changes.html
+++ b/trunk/changes.html
@@ -24,6 +24,12 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <ul>
 
+<li> SNMP_Session 0.99: Improved request ID generation so that
+<tt>avoid_negative_request_ids</tt> is always obeyed. </li>
+
+<li> SNMP_util 0.99: Added <tt>Gauge32</tt> support to
+<tt>snmpset</tt>. </li>
+
 <li> SNMP_Session 0.98: Portability fix in IPv6 support. </li>
 
 <li> SNMP_util 0.98: Support encoding of OIDs containing multiple
@@ -584,7 +590,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20030909
+20031107
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
