Mentioned Christopher J. Tengi.

--- a/changes.html
+++ b/changes.html
@@ -28,7 +28,8 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 <tt>avoid_negative_request_ids</tt> is always obeyed. </li>
 
 <li> SNMP_util 0.99: Added <tt>Gauge32</tt> support to
-<tt>snmpset</tt>. </li>
+<tt>snmpset</tt>.  Thanks to <a
+href="mailto:tengi@CS.Princeton.EDU">Christopher J. Tengi</a> </li>
 
 <li> SNMP_Session 0.98: Portability fix in IPv6 support. </li>
 
@@ -36,8 +37,8 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 quoted strings. </li>
 
 <li> SNMP_util 0.97: Added support for TimeTicks values in
-<tt>snmpset</tt>.  Patch from <a href="JOERG.KUMMER@Roche.COM">Joerg
-Kummer</a> </li>
+<tt>snmpset</tt>.  Patch from <a
+href="mailto:JOERG.KUMMER@Roche.COM">Joerg Kummer</a> </li>
 
 <li> SNMP_Session 0.97: Exported
 <tt>$SNMP_Session::default_avoid_negative_request_ids</tt>, by
@@ -590,7 +591,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20031107
+20031108
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
