--- a/trunk/changes.html
+++ b/trunk/changes.html
@@ -29,7 +29,9 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <li> SNMP_util 0.99: Added <tt>Gauge32</tt> support to
 <tt>snmpset</tt>.  Thanks to <a
-href="mailto:tengi@CS.Princeton.EDU">Christopher J. Tengi</a> </li>
+href="mailto:tengi@CS.Princeton.EDU">Christopher J. Tengi</a> for the
+idea.  Mike Mitchell provided new code that supports all known
+types. </li>
 
 <li> SNMP_Session 0.98: Portability fix in IPv6 support. </li>
 
@@ -591,7 +593,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20031108
+20031109
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
