Added new "Served Individual Item Link" to the "Essential SNMP" book on Amazon, but commented it out because it breaks the formatting.
Removed the "NEW" icon from the existing Essential SNMP pointer.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
  href="ftp://ftp.switch.ch/software/sources/network/snmp/perl/">ftp://ftp.switch.ch/software/sources/network/snmp/perl/</a>.
  </P>
 
-<p> <IMG SRC="http://www.switch.ch/img/new_icon.gif" ALT="NEW:"
-WIDTH="31" HEIGHT="12" BORDER="0">The library is featured in the book
-<em><a href="http://www.oreilly.com/catalog/esnmp/">Essential
-SNMP</a></em> by Douglas R. Mauro and Kevin J. Schmidt, July 2001,
-O'Reilly &amp; Associates, ISBN: 0-59600020-0.  You can buy it on-line
-at <a
+<!--            <iframe marginwidth="0" marginheight="0" width="120" height="240" scrolling="no" frameborder="0" src="http://rcm.amazon.com/e/cm?o=1&l=as1&f=ifr&t=simonleinensbook&p=8&asins=0596000200&IS2=1&amp;lt1=_blank"><MAP NAME="boxmap-p8"><AREA SHAPE="RECT" COORDS="14, 200, 103, 207" HREF="http://rcm.amazon.com/e/cm/privacy-policy.html?o=1" ><AREA COORDS="0,0,10000,10000" HREF="http://www.amazon.com/exec/obidos/redirect-home/simonleinensbook" ></map><img src="http://rcm-images.amazon.com/images/G/01/rcm/120x240.gif" width="120" height="240" border="0" usemap="#boxmap-p8" alt="Shop at Amazon.com"></iframe>    -->         
+
+<p> The library is featured in the book <em><a
+href="http://www.oreilly.com/catalog/esnmp/">Essential SNMP</a></em>
+by Douglas R. Mauro and Kevin J. Schmidt, July 2001, O'Reilly &amp;
+Associates, ISBN: 0-59600020-0.  You can buy it on-line at <a
 href="http://www.amazon.com/exec/obidos/ASIN/0596000200/simonleinensbook/ref=nosim/"><img
 border=0 width=90 height=29 align="middle"
 src="http://www.switch.ch/misc/leinen/images/amazon/90X29-w-logo.gif"
@@ -386,7 +386,7 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20030313
+20031204
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
