--- a/trunk/changes.html
+++ b/trunk/changes.html
@@ -24,6 +24,9 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <ul>
 
+<li> SNMP_Session 1.02: No change; version incremented for
+BER.pm. </li>
+
 <li> BER.pm 1.02: Additional decoders (``pretty printers'') can now be
 registered and unregistered for type codes using the
 <tt>register_pretty_printer</tt> and
@@ -617,7 +620,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20040217
+20040321
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
