--- a/trunk/changes.html
+++ b/trunk/changes.html
@@ -24,8 +24,11 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <ul>
 
-<li> SNMP_Session 1.02: No change; version incremented for
-BER.pm. </li>
+<li> SNMP_Session 1.03: No change; version incremented for
+<tt>BER.pm</tt> and <tt>SNMP_util.pm</tt>. </li>
+
+<li> SNMP_util.pm 1.03: Added a missing part of Mike Mitchell
+pretty-printer registration patch. </li>
 
 <li> BER.pm 1.02: Additional decoders (``pretty printers'') can now be
 registered and unregistered for type codes using the
@@ -620,7 +623,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20040321
+20040322
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
