New distribution site http://www.switch.ch/misc/leinen/snmp/perl/dist/
Made pointers more absolute.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 </DIV>
 
-<P> This package contains Perl 5 modules <tt>SNMP_Session.pm</tt> and
- <tt>BER.pm</tt>, which, when used together, provide rudimentary
- access to remote <a
- href="http://www.switch.ch/misc/leinen/snmp/">SNMP</a> (v1/v2)
- agents.  It can be downloaded from the FTP directory <a
- href="ftp://ftp.switch.ch/software/sources/network/snmp/perl/">ftp://ftp.switch.ch/software/sources/network/snmp/perl/</a>.
- </P>
+<p> This package contains Perl 5 modules <tt>SNMP_Session.pm</tt> and
+<tt>BER.pm</tt>, which, when used together, provide rudimentary access
+to remote <a href="http://www.switch.ch/misc/leinen/snmp/">SNMP</a>
+(v1/v2) agents. </p>
+
+<p> <b> Download it from <a href="http://www.switch.ch/misc/leinen/snmp/perl/dist/"><tt>http://www.switch.ch/misc/leinen/snmp/perl/dist/</tt></a></b> </p>
 
 <!--            <iframe marginwidth="0" marginheight="0" width="120" height="240" scrolling="no" frameborder="0" src="http://rcm.amazon.com/e/cm?o=1&l=as1&f=ifr&t=simonleinensbook&p=8&asins=0596000200&IS2=1&amp;lt1=_blank"><MAP NAME="boxmap-p8"><AREA SHAPE="RECT" COORDS="14, 200, 103, 207" HREF="http://rcm.amazon.com/e/cm/privacy-policy.html?o=1" ><AREA COORDS="0,0,10000,10000" HREF="http://www.amazon.com/exec/obidos/redirect-home/simonleinensbook" ></map><img src="http://rcm-images.amazon.com/images/G/01/rcm/120x240.gif" width="120" height="240" border="0" usemap="#boxmap-p8" alt="Shop at Amazon.com"></iframe>    -->         
 
@@ -386,13 +385,13 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20040622
+20040823
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
 
 <A HREF="http://validator.w3.org/"><IMG ALIGN=RIGHT BORDER=0
-     SRC="../../images/vh40.gif"
+     SRC="http://www.switch.ch/misc/leinen/images/vh40.gif"
      ALT="Valid HTML 4.0!" HEIGHT=31 WIDTH=88></A>
 
 </ADDRESS>
