--- a/trunk/index.html
+++ b/trunk/index.html
@@ -47,10 +47,10 @@ Amazon.de"></a>. </p>
 
 <P> This module differs from existing SNMP packages in that it is
  completely stand-alone, i.e. you don't need to have another SNMP
- package such as CMU SNMP.  It is also written entirely in Perl, so
+ package such as Net-SNMP.  It is also written entirely in Perl, so
  you don't have to compile any C modules.  It uses the Perl 5
- <SAMP>Socket.pm</SAMP> module and should therefore be very
- portable, even to non-Unix systems. </P>
+ <SAMP>Socket.pm</SAMP> module and should therefore be very portable,
+ even to non-Unix systems. </P>
 
 <p> The SNMP operations currently supported are "get", "get-next",
  "get-bulk" and "set", as well as trap generation and reception. </p>
