--- a/trunk/changes.html
+++ b/trunk/changes.html
@@ -24,6 +24,14 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 <ul>
 
+<li> SNMP_Session.pm 1.07: Fixed <tt>strict&nbsp;subs</tt> error with
+newer versions of Perl.  Thanks to Gerry Dalton for spotting
+this. </li>
+
+<li> SNMP_Session.pm 1.06: <tt>decode_trap_request</tt> now
+understands SNMPv2 inform requests in addition to SNMPv1 traps and
+SNMPv2 traps.  Contributed by Andrew Cornford-Matheson. </li>
+
 <li> <tt>index.html</tt>: The code is no longer available from
 <tt>ftp.switch.ch</tt>, but via HTTP from
 <tt>www.switch.ch</tt>. </li>
@@ -636,7 +644,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20040823
+20041029
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
