README.SNMP_util -> dist/

--- a/changes.html
+++ b/changes.html
@@ -207,7 +207,7 @@ warnings. </li>
 
 <li> SNMP_util.pm 0.86: New <samp>snmpmaptable</samp> subroutine.
 This is a more user-friendly version of <samp>map_table</samp> and is
-described in the <a href="README.SNMP_util">README.SNMP_util</a>
+described in the <a href="dist/README.SNMP_util">README.SNMP_util</a>
 file.  From Mike Mitchell. </li>
 
 <li> SNMP_util.pm 0.86: Support for the awesome <tt>get-bulk</tt>
@@ -406,7 +406,7 @@ as a type specifier. </li>
 <li> SNMP_util.pm 0.70: <a href="mailto:mcm@unx.sas.com">Mike
 Mitchell</a> added code for parsing MIB files.  See the description of
 <tt>snmpMIB_to_OID</tt> in <a
-href="README.SNMP_util"><tt>README.SNMP_util</tt></a>. </li>
+href="dist/README.SNMP_util"><tt>README.SNMP_util</tt></a>. </li>
 
 <li> SNMP_util.pm 0.69: Enable parsing of community strings which
 contain <samp>@</samp> characters. </li>
@@ -644,7 +644,7 @@ use SNMP_Session "0.52";
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20041029
+20050712
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
