--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <DIV ALIGN=CENTER>
   <H1>SNMP support for Perl 5</H1>
 
-  <p> Copyright (c) 1995-2004, Simon Leinen<br>
+  <p> Copyright (c) 1995-2005, Simon Leinen<br>
   All rights reserved </p>
 
   <em> This program is free software; you can redistribute it under
@@ -20,10 +20,11 @@ HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</p>
 
 </DIV>
 
-<p> This package contains Perl 5 modules <tt>SNMP_Session.pm</tt> and
-<tt>BER.pm</tt>, which, when used together, provide rudimentary access
-to remote <a href="http://www.switch.ch/misc/leinen/snmp/">SNMP</a>
-(v1/v2) agents. </p>
+<p> This package contains Perl 5 modules <tt>SNMP_Session.pm</tt>,
+<tt>BER.pm</tt>, and <tt>SNMP_util.pm</tt> which, when used together,
+provide rudimentary access to remote <a
+href="http://www.switch.ch/misc/leinen/snmp/">SNMP</a> (v1/v2)
+agents. </p>
 
 <p> <b> Download it from <a href="http://www.switch.ch/misc/leinen/snmp/perl/dist/"><tt>http://www.switch.ch/misc/leinen/snmp/perl/dist/</tt></a></b> </p>
 
@@ -51,6 +52,13 @@ Amazon.de"></a>. </p>
  you don't have to compile any C modules.  It uses the Perl 5
  <SAMP>Socket.pm</SAMP> module and should therefore be very portable,
  even to non-Unix systems. </P>
+
+<p> Note: For the development of new scripts, I strongly recommend to
+use the higher-level programming interface provided by
+<tt>SNMP_util.pm</tt>.  Its use is described in <a
+href="dist/README.SNMP_util"><tt>README.SNMP_util</tt></a>.  The
+remainder of this page desribes the low-level API in
+<tt>SNMP_Session.pm</tt>, which you normally shouldn't use. </p>
 
 <p> The SNMP operations currently supported are "get", "get-next",
  "get-bulk" and "set", as well as trap generation and reception. </p>
@@ -385,7 +393,7 @@ while ($bindings ne '') {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-20040902
+20050712
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
