Added missing `mailto:'.

--- a/changes.html
+++ b/changes.html
@@ -342,7 +342,7 @@ the <tt>get-bulk</tt> operator is used). </li>
 
 <li> SNMP_util 0.73: Added a fix from <a
 href="mailto:mcm@unx.sas.com">Mike Mitchell</a> (originally <a
-href="demel@zid.tuwien.ac.at">Johannes Demel</a>) to treat
+href="mailto:demel@zid.tuwien.ac.at">Johannes Demel</a>) to treat
 <tt>OBJECT-IDENTITY</tt> like <tt>OBJECT IDENTIFIER</tt>.
 
 <li> SNMP_Session 0.76: Added some debugging support for
